--- a/BackEnd/api-gateway/src/main/resources/application.yml
+++ b/BackEnd/api-gateway/src/main/resources/application.yml
@@ -15,6 +15,15 @@ spring:
                 args:
                   name: authServiceCircuitBreaker
                   fallbackUri: forward:/fallback
+            - id: recruitment-service
+              uri: http://localhost:8081
+              predicates:
+                - Path=/positions/**
+              filters:
+                -name: CircuitBreaker
+                args:
+                  name: authServiceCircuitBreaker
+                  fallbackUri: forward:/fallback
 
 server:
   port: 8443
