--- a/BackEnd/recruitment-service/pom.xml
+++ b/BackEnd/recruitment-service/pom.xml
@@ -77,6 +77,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
