added AnalysisService(recuitment-service) to publish event to ai-service for cv score

--- a/BackEnd/recruitment-service/src/main/resources/application.yml
+++ b/BackEnd/recruitment-service/src/main/resources/application.yml
@@ -54,6 +54,9 @@ storage:
 llama-parse:
   api-key: ${LLAMAPARSE_API_KEY}
 
+analysis:
+  batch-size: 20
+
 server:
   address: 0.0.0.0
   port: 8081
