--- a/BackEnd/ai-service/pom.xml
+++ b/BackEnd/ai-service/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
