--- a/BackEnd/ai-service/pom.xml
+++ b/BackEnd/ai-service/pom.xml
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>3.5.6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
