--- a/BackEnd/api-gateway/src/main/resources/application.yml
+++ b/BackEnd/api-gateway/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         webflux:
           routes:
             - id: auth-service
-              uri: http://localhost:8080
+              uri: http://auth-service:8081
               predicates:
                 - Path=/auth/**
               filters:
@@ -16,7 +16,7 @@ spring:
                   name: authServiceCircuitBreaker
                   fallbackUri: forward:/fallback
             - id: recruitment-service
-              uri: http://localhost:8081
+              uri: http://recruitment-service:8082
               predicates:
                 - Path=/positions/**, /cv/**, /upload/**, /analysis/**, /tracking/**
               filters:
@@ -26,7 +26,7 @@ spring:
                   fallbackUri: forward:/fallback
 
 server:
-  port: 8443
+  port: 8080
   address: 0.0.0.0
 
 jwt:
@@ -37,5 +37,3 @@ management:
     web:
       exposure:
         include: health,info
-
-
