--- a/BackEnd/recruitment-service/pom.xml
+++ b/BackEnd/recruitment-service/pom.xml
@@ -86,6 +86,10 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
