--- a/BackEnd/ai-service/Dockerfile
+++ b/BackEnd/ai-service/Dockerfile
@@ -1,5 +1,24 @@
-FROM eclipse-temurin:17-jdk-alpine
+# Stage 1: Build
+FROM maven:3.8-eclipse-temurin-17-alpine AS build
 WORKDIR /app
-COPY target/ai-service-0.0.1-SNAPSHOT.jar app.jar
+
+# Copy pom.xml trước để cache dependencies
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+# Copy source và build
+COPY src ./src
+RUN mvn clean package -DskipTests -B
+
+# Stage 2: Run
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8083
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+# Tối ưu JVM cho container
+ENTRYPOINT ["java", \
+    "-XX:+UseContainerSupport", \
+    "-XX:MaxRAMPercentage=75.0", \
+    "-Djava.security.egd=file:/dev/./urandom", \
+    "-jar", "app.jar"]
