--- a/BackEnd/api-gateway/Dockerfile
+++ b/BackEnd/api-gateway/Dockerfile
@@ -1,24 +1,24 @@
-# Stage 1: Build
 FROM maven:3.8-eclipse-temurin-17-alpine AS build
-WORKDIR /app
+WORKDIR /build
 
-# Copy pom.xml trước để cache dependencies
-COPY pom.xml .
+# Build common-library trước
+COPY common-library/pom.xml ./common-library/pom.xml
+COPY common-library/src ./common-library/src
+RUN cd common-library && mvn clean install -DskipTests -B
+
+# Build ai-service
+WORKDIR /build/service
+COPY ai-service/pom.xml .
 RUN mvn dependency:go-offline -B
-
-# Copy source và build
-COPY src ./src
+COPY ai-service/src ./src
 RUN mvn clean package -DskipTests -B
 
 # Stage 2: Run
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /build/service/target/*.jar app.jar
 EXPOSE 8080
-
-# Tối ưu JVM cho container
 ENTRYPOINT ["java", \
     "-XX:+UseContainerSupport", \
     "-XX:MaxRAMPercentage=75.0", \
-    "-Djava.security.egd=file:/dev/./urandom", \
     "-jar", "app.jar"]
