--- a/BackEnd/auth-service/Dockerfile
+++ b/BackEnd/auth-service/Dockerfile
@@ -2,15 +2,15 @@ FROM maven:3.8-eclipse-temurin-17-alpine AS build
 WORKDIR /build
 
 # Build common-library
-COPY ../common-library/pom.xml ./common-library/pom.xml
-COPY ../common-library/src ./common-library/src
+COPY common-library/pom.xml ./common-library/pom.xml
+COPY common-library/src ./common-library/src
 RUN cd common-library && mvn clean install -DskipTests -B
 
-# Build auth-service (từ current directory)
+# Build auth-service
 WORKDIR /build/service
-COPY pom.xml .
+COPY auth-service/pom.xml .
 RUN mvn dependency:go-offline -B
-COPY src ./src
+COPY auth-service/src ./src
 RUN mvn clean package -DskipTests -B
 
 # Stage 2: Run
