--- a/BackEnd/api-gateway/Dockerfile
+++ b/BackEnd/api-gateway/Dockerfile
@@ -2,15 +2,15 @@ FROM maven:3.8-eclipse-temurin-17-alpine AS build
 WORKDIR /build
 
 # Build common-library
-COPY ../common-library/pom.xml ./common-library/pom.xml
-COPY ../common-library/src ./common-library/src
+COPY common-library/pom.xml ./common-library/pom.xml
+COPY common-library/src ./common-library/src
 RUN cd common-library && mvn clean install -DskipTests -B
 
 # Build api-gateway
 WORKDIR /build/service
-COPY pom.xml .
+COPY api-gateway/pom.xml .
 RUN mvn dependency:go-offline -B
-COPY src ./src
+COPY api-gateway/src ./src
 RUN mvn clean package -DskipTests -B
 
 # Stage 2: Run
