--- a/BackEnd/ai-service/src/main/resources/application.yml
+++ b/BackEnd/ai-service/src/main/resources/application.yml
@@ -1,15 +1,8 @@
 spring:
   application:
     name: ai-service
-  # Read .env
-  config:
-    import: optional:classpath:.env[.properties]
-  # RabbitMQ
-  rabbitmq:
-    host: localhost
-    port: ${RABBITMQ_PORT}
-    username: ${RABBITMQ_USERNAME}
-    password: ${RABBITMQ_PASSWORD}
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
 
 gemini:
   api-key: ${GEMINI_API_KEY}
