--- a/BackEnd/auth-service/src/main/resources/application.yml
+++ b/BackEnd/auth-service/src/main/resources/application.yml
@@ -1,39 +1,14 @@
 spring:
   application:
     name: auth-service
-  # Read .env
-  config:
-    import: optional:classpath:.env[.properties]
-  datasource:
-    url: "${DB_URL}"
-    username: "${DB_USERNAME}"
-    password: "${DB_PASSWORD}"
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
-      connection-timeout: 30000
-      idle-timeout: 600000
-      max-lifetime: 1800000
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        jdbc:
-          time_zone: Asia/Ho_Chi_Minh
-    generate-ddl: true
-    defer-datasource-initialization: true
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
 
 server:
   address: 0.0.0.0
   port: 8081
 
-#JWT
 jwt:
-  secret: "${JWT_SECRET}"
-  expiration: 1800000
-  refresh-expiration: 604800000
+  secret: ${JWT_SECRET}
+  expiration: 1800000  # 30 phút
+  refresh-expiration: 604800000  # 7 ngày
