--- a/BackEnd/recruitment-service/src/main/resources/application.yml
+++ b/BackEnd/recruitment-service/src/main/resources/application.yml
@@ -1,63 +1,5 @@
 spring:
   application:
     name: recruitment-service
-  # Read .env
-  config:
-    import: optional:classpath:.env[.properties]
-  # Database
-  datasource:
-    url: "${DB_URL}"
-    username: "${DB_USERNAME}"
-    password: "${DB_PASSWORD}"
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      maximum-pool-size: 20
-      minimum-idle: 5
-      connection-timeout: 30000
-      idle-timeout: 600000
-      max-lifetime: 1800000
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        jdbc:
-          time_zone: Asia/Ho_Chi_Minh
-    generate-ddl: true
-    defer-datasource-initialization: true
-
-  # RabbitMQ
-  rabbitmq:
-    host: localhost
-    port: "${RABBITMQ_PORT}"
-    username: "${RABBITMQ_USERNAME}"
-    password: "${RABBITMQ_PASSWORD}"
-
-
-# CloudFlare
-r2:
-  account-id: ${R2_ACCOUNT_ID}
-  access-key: ${R2_ACCESS_KEY}
-  secret-key: ${R2_SECRET_KEY}
-  bucket-name: ${R2_BUCKET_NAME}
-  region: auto
-  public-url: https://${R2_ACCOUNT_ID}.r2.cloudflarestorage.com/${R2_BUCKET_NAME}
-
-# Local storage
-storage:
-  local:
-    base-path: uploads
-
-# LLamaParse
-llama-parse:
-  api-key: ${LLAMAPARSE_API_KEY}
-
-analysis:
-  batch-size: 20
-
-server:
-  address: 0.0.0.0
-  port: 8082
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
