--- a/BackEnd/api-gateway/src/main/resources/application-dev.yml
+++ b/BackEnd/api-gateway/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
             response-timeout: 300s
           routes:
             - id: auth-service
-              uri: http://localhost:8081
+              uri: http://auth-service:8081
               predicates:
                 - Path=/auth/**
                 - Method=GET,POST,PUT,DELETE
@@ -23,7 +23,7 @@ spring:
                     statusCodes: 500,502,503
 
             - id: recruitment-service
-              uri: http://localhost:8082
+              uri: http://recruitment-service:8082
               predicates:
                 - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**
                 - Method=GET,POST,PUT,DELETE
