--- a/BackEnd/recruitment-service/src/main/resources/application-prod.yml
+++ b/BackEnd/recruitment-service/src/main/resources/application-prod.yml
@@ -47,6 +47,15 @@ llama-parse:
 analysis:
   batch-size: 20
 
+# GG Drive
+google:
+  drive:
+    folder-id: ${FOLDER_ID}
+    service-account-file: ${SERVICE_ACCOUNT}
+    oauth-client-file: ${OAUTH_CLIENT}
+    use-shared-drive: false
+
+
 server:
   address: 0.0.0.0
   port: 8082
