updated to use OAuth-client variable

--- a/BackEnd/recruitment-service/src/main/resources/application-local.yml
+++ b/BackEnd/recruitment-service/src/main/resources/application-local.yml
@@ -63,7 +63,7 @@ analysis:
 google:
   drive:
     folder-id: ${FOLDER_ID}
-    oauth-client-file: ${OAUTH_CLIENT}
+    oauth-client-file: ${OAUTH_CLIENT_FILE}
     use-shared-drive: false
 
 server:
