--- a/BackEnd/recruitment-service/pom.xml
+++ b/BackEnd/recruitment-service/pom.xml
@@ -42,11 +42,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <version>9.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
