--- a/BackEnd/recruitment-service/pom.xml
+++ b/BackEnd/recruitment-service/pom.xml
@@ -132,6 +132,12 @@
             <artifactId>google-oauth-client-jetty</artifactId>
             <version>1.39.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.opennlp/opennlp-tools -->
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>2.5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
