updated .yml to add vhost

--- a/BackEnd/ai-service/src/main/resources/application-prod.yml
+++ b/BackEnd/ai-service/src/main/resources/application-prod.yml
@@ -4,6 +4,9 @@ spring:
     port: ${RABBITMQ_PORT}
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
+    virtual-host: ${RABBITMQ_VHOST}
+    ssl:
+      enabled: true
 
 gemini:
   api-key: ${GEMINI_API_KEY}
