--- a/BackEnd/api-gateway/src/main/resources/application-prod.yml
+++ b/BackEnd/api-gateway/src/main/resources/application-prod.yml
@@ -12,7 +12,10 @@ spring:
               uri: ${AUTH_SERVICE_URL}
               predicates:
                 - Path=/auth/**
-                - Method=GET,POST,PUT,DELETE
+                - Method=GET
+                - Method=POST
+                - Method=PUT
+                - Method=DELETE
               filters:
                 - name: CircuitBreaker
                   args:
@@ -22,8 +25,11 @@ spring:
             - id: recruitment-service
               uri: ${RECRUITMENT_SERVICE_URL}
               predicates:
-                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**
-                - Method=GET,POST,PUT,DELETE
+                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/debug/**
+                - Method=GET
+                - Method=POST
+                - Method=PUT
+                - Method=DELETE
               filters: []
   http:
     codecs:
