--- a/BackEnd/api-gateway/src/main/resources/application-prod.yml
+++ b/BackEnd/api-gateway/src/main/resources/application-prod.yml
@@ -1,28 +1,29 @@
 spring:
   cloud:
     gateway:
-      routes:
-        - id: auth-service
-          uri: ${AUTH_SERVICE_URL}
-          predicates:
-            - Path=/auth/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - name: CircuitBreaker
-              args:
-                name: authServiceCircuitBreaker
-                statusCodes: 500,502,503
+      server:
+        webflux:
+          httpclient:
+            connect-timeout: 60000
+            response-timeout: 60s
+          routes:
+            - id: auth-service
+              uri: ${AUTH_SERVICE_URL}
+              predicates:
+                - Path=/auth/**
+                - Method=GET,POST,PUT,DELETE
+              filters:
+                - name: CircuitBreaker
+                  args:
+                    name: authServiceCircuitBreaker
+                    statusCodes: 500,502,503
 
-        - id: recruitment-service
-          uri: ${RECRUITMENT_SERVICE_URL}
-          predicates:
-            - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/debug/**
-            - Method=GET,POST,PUT,DELETE
-          filters: []
-
-      httpclient:
-        connect-timeout: 30000
-        response-timeout: 300s
+            - id: recruitment-service
+              uri: ${RECRUITMENT_SERVICE_URL}
+              predicates:
+                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/debug/**
+                - Method=GET,POST,PUT,DELETE
+              filters: []
 
   http:
     codecs:
