--- a/BackEnd/recruitment-service/src/main/resources/application.yml
+++ b/BackEnd/recruitment-service/src/main/resources/application.yml
@@ -3,3 +3,23 @@ spring:
     name: recruitment-service
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
+
+server:
+  address: 0.0.0.0
+  port: 8082
+  tomcat:
+    connection-timeout: 90000
+    max-http-post-size: 52428800  # 50MB
+    threads:
+      max: 200
+      min-spare: 10
+  max-http-header-size: 65536
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
