updated: .yml of ai-service to increase request timeout

--- a/BackEnd/ai-service/src/main/resources/application.yml
+++ b/BackEnd/ai-service/src/main/resources/application.yml
@@ -4,15 +4,25 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
 
-gemini:
-  api-key: ${GEMINI_API_KEY}
+server:
+  address: 0.0.0.0
+  port: 8083
+  tomcat:
+    connection-timeout: 90000
+    max-http-post-size: 52428800  # 50MB
+    threads:
+      max: 200
+      min-spare: 10
+  max-http-header-size: 65536
 
 management:
   endpoints:
     web:
       exposure:
         include: health,info
+  endpoint:
+    health:
+      show-details: always
 
-server:
-  address: 0.0.0.0
-  port: 8083
+gemini:
+  api-key: ${GEMINI_API_KEY}
