--- a/BackEnd/auth-service/src/main/resources/application.yml
+++ b/BackEnd/auth-service/src/main/resources/application.yml
@@ -26,5 +26,7 @@ management:
 
 jwt:
   secret: ${JWT_SECRET}
-  expiration: 1800000  # 30 phút
-  refresh-expiration: 604800000  # 7 ngày
+  expiration: 30000  # 5 phút
+  refresh-expiration: 30000  # 10 p
+#  expiration: 1800000 # 30 phút
+#  refresh-expiration: 604800000 # 7 ngày
