--- a/BackEnd/api-gateway/src/main/resources/application-dev.yml
+++ b/BackEnd/api-gateway/src/main/resources/application-dev.yml
@@ -25,7 +25,7 @@ spring:
             - id: recruitment-service
               uri: http://recruitment-service:8082
               predicates:
-                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**
+                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/chunking/**
                 - Method=GET,POST,PUT,DELETE
               filters: []
   http:
