--- a/BackEnd/api-gateway/src/main/resources/application-local.yml
+++ b/BackEnd/api-gateway/src/main/resources/application-local.yml
@@ -25,7 +25,7 @@ spring:
             - id: recruitment-service
               uri: http://localhost:8082
               predicates:
-                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/debug/**
+                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/chunking/**
                 - Method=GET,POST,PUT,DELETE
               filters: []
 
