--- a/BackEnd/api-gateway/src/main/resources/application-prod.yml
+++ b/BackEnd/api-gateway/src/main/resources/application-prod.yml
@@ -25,7 +25,7 @@ spring:
             - id: recruitment-service
               uri: ${RECRUITMENT_SERVICE_URL}
               predicates:
-                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/debug/**
+                - Path=/positions/**,/cv/**,/upload/**,/analysis/**,/tracking/**,/chunking/**
                 - Method=GET,POST,PUT,DELETE
               filters:
                 - StripPrefix=0
