--- a/BackEnd/auth-service/src/main/resources/application-prod.yml
+++ b/BackEnd/auth-service/src/main/resources/application-prod.yml
@@ -34,5 +34,5 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
-  expiration: 300000    # 5 phút
-  refresh-expiration: 600000  # 10 p
+  expiration: 900000          # 15 phút
+  refresh-expiration: 1800000 # 30 phút
