--- a/BackEnd/api-gateway/src/main/resources/application-local.yml
+++ b/BackEnd/api-gateway/src/main/resources/application-local.yml
@@ -29,6 +29,13 @@ spring:
                 - Method=GET,POST,PUT,DELETE
               filters: []
 
+            - id: chatbot-service
+              uri: http://localhost:8085
+              predicates:
+                - Path=/chatbot/**
+                - Method=GET,POST,PUT,DELETE
+              filters: []
+
             - id: ai-service
               uri: http://localhost:8083
               predicates:
