--- a/BackEnd/chatbot-service/DockerFile
+++ b/BackEnd/chatbot-service/DockerFile
@@ -1,25 +1,40 @@
 FROM python:3.12-slim
 
+# Set working directory
 WORKDIR /app
+ENV PYTHONPATH=/app
 
-# Install system dependencies
+# Install system dependencies (including curl for healthcheck)
 RUN apt-get update && apt-get install -y \
+    build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
+# Copy requirements first for better caching
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+# Install Python dependencies
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir --upgrade -r requirements.txt
+
+# Pre-download embedding model to reduce startup time
+# This will cache the model in the Docker image (~130MB for bge-small)
+# RUN python -c "from sentence_transformers import SentenceTransformer; \
+#     SentenceTransformer('BAAI/bge-small-en-v1.5')"
 
 # Copy application code
 COPY . .
+
+# Create non-root user
+RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+USER appuser
 
 # Expose port
 EXPOSE 8085
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:8085/api/v1/health || exit 1
+    CMD curl -f http://localhost:8085/chatbot/health || exit 1
 
 # Run application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8085"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8085"]
