--- a/BackEnd/chatbot-service/requirements.txt
+++ b/BackEnd/chatbot-service/requirements.txt
@@ -1,11 +1,14 @@
 # FastAPI & Web
 fastapi==0.123.5
 uvicorn[standard]==0.38.0
+click==8.1.7
 pydantic==2.12.5
 pydantic-settings==2.12.0
 python-multipart==0.0.18
 
 # Embedding & Vector DB
+huggingface-hub==0.26.5
+transformers==4.46.3
 sentence-transformers==5.1.2
 qdrant-client==1.16.1
 
