--- a/BackEnd/docker-compose-build.yml
+++ b/BackEnd/docker-compose-build.yml
@@ -196,6 +196,7 @@ services:
           - chatbot-service
     env_file:
       - ./chatbot-service/.env.docker
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8085"]
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8085/chatbot/health" ]
       interval: 30s
