--- a/BackEnd/auth-service/src/main/resources/application.yml
+++ b/BackEnd/auth-service/src/main/resources/application.yml
@@ -26,7 +26,7 @@ management:
 
 jwt:
   secret: ${JWT_SECRET}
-  expiration: 900000          # 15 phút
-  refresh-expiration: 1800000 # 30 phút
-#  expiration: 1800000 # 30 phút
-#  refresh-expiration: 604800000 # 7 ngày
+#  expiration: 900000          # 15 phút
+#  refresh-expiration: 1800000 # 30 phút
+  expiration: 1800000 # 30 phút
+  refresh-expiration: 604800000 # 7 ngày
